WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32709
[GTK] GRefPtr does not take a reference when assigned a raw pointer
https://bugs.webkit.org/show_bug.cgi?id=32709
Summary
[GTK] GRefPtr does not take a reference when assigned a raw pointer
Martin Robinson
Reported
2009-12-18 05:43:18 PST
GRefPtr should always take a reference unless created via adoptRef.
Attachments
Patch for this issue
(2.18 KB, patch)
2009-12-18 06:12 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2009-12-18 06:12:11 PST
Created
attachment 45147
[details]
Patch for this issue
WebKit Review Bot
Comment 2
2009-12-18 06:13:50 PST
style-queue ran check-webkit-style on
attachment 45147
[details]
without any errors.
WebKit Commit Bot
Comment 3
2009-12-18 11:55:34 PST
Comment on
attachment 45147
[details]
Patch for this issue Clearing flags on attachment: 45147 Committed
r52328
: <
http://trac.webkit.org/changeset/52328
>
WebKit Commit Bot
Comment 4
2009-12-18 11:55:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug