2009-12-18  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] GRefPtr does not take a reference when assigned a raw pointer
        https://bugs.webkit.org/show_bug.cgi?id=32709

        Ensure that when assigning a raw pointer to a GRefPtr, the reference
        count is incremented. Also remove the GRefPtr conversion overload as
        GRefPtr types have necessarily incompatible reference counting.

        * wtf/gtk/GRefPtr.h:
        (WTF::GRefPtr::operator=):

Canonical link: https://commits.webkit.org/43751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52328 268f45cc-cd09-0410-ab3c-d52691b4dbfc